Bug 358358 - No change of association symbol line colour and width possible
Summary: No change of association symbol line colour and width possible
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.18.0 (KDE Applications 15.12.0)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-22 08:54 UTC by Ralf Habacker
Modified: 2016-02-08 11:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.18.2 (KDE Applications 15.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-01-22 08:54:24 UTC
Changing the colour of an association do not change the colour of the related association symbol too.


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add two classes and add an inheritance association between them
3. right-click on the association, select line colour, change colour and save


Actual Results:  
The colour of the association line has been changed, but the colour of the association symbol on the end of the association not.

Expected Results:  
The colour of the association symbol should be changed too.
Comment 1 Ralf Habacker 2016-01-22 10:28:11 UTC
Symbol line width could also no be changed.
Comment 2 Ralf Habacker 2016-01-22 10:33:12 UTC
Git commit c14b580a5f42358d9dfbd916b3afc315e12ffd51 by Ralf Habacker.
Committed on 22/01/2016 at 10:32.
Pushed by habacker into branch 'Applications/15.12'.

Fix 'No change of association symbol line colour and width possible'.

The bug is caused by two issues:

1. line color changes are not routed through the virtual method setLineColor()
2. class AssociationLine did not propagate line color changes to the related symbols.

This patch includes a minor refactoring in class AssociationLine
to provide the standard pen based api, which is required to set symbol pen.
Related: bug 358365
FIXED-IN:2.18.2 (KDE Applications 15.12.2)

M  +23   -8    umbrello/umlwidgets/associationline.cpp
M  +2    -0    umbrello/umlwidgets/associationline.h
M  +16   -0    umbrello/umlwidgets/associationwidget.cpp
M  +2    -0    umbrello/umlwidgets/associationwidget.h
M  +1    -1    umbrello/umlwidgets/boxwidget.cpp
M  +8    -8    umbrello/umlwidgets/widgetbase.cpp

http://commits.kde.org/umbrello/c14b580a5f42358d9dfbd916b3afc315e12ffd51
Comment 3 Ralf Habacker 2016-02-08 11:11:06 UTC
Git commit 8909fe46197efb45fd0a9263bf6afdf7b4a5fd34 by Ralf Habacker.
Committed on 05/02/2016 at 08:35.
Pushed by habacker into branch 'Applications/15.12'.

Fix initial setting of line color of an association widget.

Because assocation line color is now setable an additional
bug has been raised on initialisation.
The initial setting of association line colors needs to be
finished in the derived constructors because virtual methods
of a derived class are not possible in WidgetBase constructor.

M  +3    -0    umbrello/umlwidgets/associationwidget.cpp
M  +4    -0    umbrello/umlwidgets/umlwidget.cpp
M  +2    -0    umbrello/umlwidgets/widgetbase.cpp

http://commits.kde.org/umbrello/8909fe46197efb45fd0a9263bf6afdf7b4a5fd34