Fix 'No change of association symbol line colour and width possible'.

The bug is caused by two issues:

1. line color changes are not routed through the virtual method setLineColor()
2. class AssociationLine did not propagate line color changes to the related symbols.

This patch includes a minor refactoring in class AssociationLine
to provide the standard pen based api, which is required to set symbol pen.

BUG:358358
CCBUG:358365
FIXED-IN:2.18.2 (KDE Applications 15.12.2)